Align Issue

--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,7 @@
   }
   .s3li {
     font-size: 13px !important;
+    padding: 0;
     /* font-weight: 100 !important; */
   }
   .imageS4 {
@@ -152,6 +153,7 @@
   }
   .shop03Li {
     font-size: 11px;
+    padding: 0;
   }
   .shop03Li1 {
     font-size: 11px !important;
@@ -299,7 +301,7 @@
    
   }
   .screen11Para2 {
-    font-size: 10px !important;
+    font-size: 11px !important;
     padding: 0 !important;
     margin-top: 62px
    
@@ -425,5 +427,8 @@
   .flexLast {
     display: flex;
     flex-direction: column-reverse;
+  }
+  .footerRes {
+    padding: 0;
   }
 }
